Task 2.1 - Added flyway and sql scripts

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: admin
+  flyway:
+    enabled: true
+    schemas: persado
